[package]
name = "lithoscan"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
pcap = "0.10"
macaddr = "1.0"
ipnetwork = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
mac_oui = "0.4"
pnet = { version = "0.31", features = ["std"] }
pnet_packet = "0.31"
